src/main/resources/org/obsidiantoaster/generator/addon/ui/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ${name}-rest
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
