src/main/resources/org/obsidiantoaster/generator/addon/ui/route.yml
apiVersion: v1
kind: Route
metadata:
  name: ${name}
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${name}
